Introduced Errors field for CsvComparison script fixture, returning a hash table of errors (null if none). Introduced Cell column in CsvComparison query and table tables, returning cell reference in Excel format. Added Concatenate in CommonFunctions to replace Concat and deprecated Concat. Refactored some methods with high complexity and class coupling.

--- a/FitNesseRoot/FitSharpDemos/SupportFunctionsSuite/ObjectTest.wiki
+++ b/FitNesseRoot/FitSharpDemos/SupportFunctionsSuite/ObjectTest.wiki
@@ -1,10 +1,8 @@
 |Script|Common Functions                                              |
-|check |concat|[simple string]            |simple string              |
-|check |concat|[1, 2, 3]                  |123                        |
+|check |concatenate|[simple string]            |simple string         |
+|check |concatenate|[1, 2, 3]                  |123                   |
 |check |echo  |!{name:luke, category:jedi}|!{name:luke, category:jedi}|
 
 |Script|Dictionary Library                                                                               |
 |check |get|name|from|!{name:bob, addr:here}                                                         |bob|
 |check |get|name|from|<table><tr><td>id</td><td>1</td></tr><tr><td>name</td><td>han</td></tr></table>|han|
-
-
