--- a/SupportFunctions/SupportFunctions/ReleaseNotes.txt
+++ b/SupportFunctions/SupportFunctions/ReleaseNotes.txt
@@ -12,3 +12,7 @@
 2.3.1 Introduced XML documentation to replace [Documentation] attributes
 2.3.2 Fixed Image comparison error caused by an extra space before the end of image tags
 2.3.3 Made DoOn case insensitive for members, added object as a valid type for EvaluateAs
+2.3.4 Introduced Get and GetOf to replace DoOn, as more natural to use (DoOn was still experimental) and placed them in fixture ReflectionFunctions.
+      Allowed system types like int, bool, long in Get functions; improved method usage to allow both params and 'of' input.
+      TypeDictionary now gets the standard types from inspecting mscorlib instead of hardcoding.
+      Introduced Requires to replace Debug.Assert
