--- a/SupportFunctions/SupportFunctions/ReleaseNotes.txt
+++ b/SupportFunctions/SupportFunctions/ReleaseNotes.txt
@@ -18,3 +18,5 @@
       Introduced Requires to replace Debug.Assert
 3.0.0-beta: Migration to .NET 5.0  (dual build .NET 4.6.1 and .NET 5.0) and LiveCharts 2 beta (.NET 5.0 only)
 3.0.0-beta-1: Bug fix: series with NaN entries were not displayed. Refactored conditional reference of Live Charts to make NuGet pick it up.
+3.0.0-beta-2: Update to LiveCharts 2 beta 50, aligned WebUI charts with Live Charts, introduced margins for Y axis so graphs can't touch top/bottom borders anymore.
+3.0.0-beta-3: activated XML documentation
