--- a/FitNesseRoot/FitSharpDemos/SupportFunctionsSuite/GetTest.wiki
+++ b/FitNesseRoot/FitSharpDemos/SupportFunctionsSuite/GetTest.wiki
@@ -26,3 +26,5 @@
 |check          |get      |Math.PI         |~=3.14159                       |
 |check          |get      |Empty           |                                |
 |check          |get      |bool.falsestring|False                           |
+|check          |get      |Math.Sqrt       |of|0x10          |4             |
+|check          |get      |Math.Sqrt(0x19) |5                               |
