--- a/SupportFunctions/SupportFunctions/ReleaseNotes.txt
+++ b/SupportFunctions/SupportFunctions/ReleaseNotes.txt
@@ -25,3 +25,7 @@
               and made machine info and user info tests more robust.
 3.0.0-beta-6: made DisplayName more robust
 3.0.0-beta-7: Added ReflectionFunctions.GetWithParams
+3.0.0-beta-8: migrated to .NET 6.0 and LiveCharts 2.0.0-beta-920
+3.0.0-beta-9: migrated to LiveCharts 2.0.0 RC 2
+3.0.0-beta-10: migrated to .NET 8 and LiveCharts 2.0.0-rc4.5
+3.0.0-beta-11: migrated to LiveCharts 2.0.0-rc5.1
